# AI-Development-Playbook

./: .gitignore  LICENSE  README.md  agent_manifest.json  gemini_rules.md  llms.txt  mcp_best_practices.md  python_cookiecutter.md
.github/workflows/: test-template.yml
adr/: 001-use-uv-for-dependency-management.md  002-pragmatic-strict-typing.md  003-src-layout.md  004-async-by-default.md
architecture/: rag_best_practices.md
configs/: ci.yml  pre-commit-config.yaml  pyproject.toml
guides/: api_rules.md  python_best_practices.md  testing_and_dod.md
prompts/: system_prompt.md
templates/python-starter/: cookiecutter.json
templates/python-starter/{{cookiecutter.project_slug}}/: README.md  pyproject.toml
templates/python-starter/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  app.py  logging.py  main.py  settings.py
templates/python-starter/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/api/: health.py
